--- a/style.css
+++ b/style.css
@@ -1,25 +1,46 @@
 body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
-    margin: 0;
-    padding: 0;
+    margin-bottom: 40px;
+    padding-bottom:50px;
+    
 }
-
+#searchData{
+    background-color: #fff;
+    width: 50%;
+    max-width: 300px;
+    height:fit-content;
+    margin: 0 auto;
+    padding: 5px;
+   right: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+#editBtn{
+    width: 100px;
+    padding: 10px 15px;
+    background-color: red;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
 h1 {
     text-align: center;
     margin-top: 20px;
     text-decoration: underline;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-weight: bold;
+    font-weight:normal;
 }
 
 form {
     background-color: #fff;
-    width: 80%;
-    max-width: 500px;
+    width: 50%;
+    max-width: 300px;
+    height:fit-content;
+    align-items: center;
     margin: 0 auto;
-    padding: 20px;
-    border-radius: 8px;
+    padding: 5px;
+   
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -31,21 +52,20 @@ input[type="text"],
 input[type="date"],
 textarea,
 input[type="number"] {
-    width: 100%;
-    padding: 8px;
-    margin: 5px 0;
+    width: 200px;
+    padding: 3px;
+    margin: 3px 0;
     border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
+    border-radius: 3px;
+    box-sizing:content-box;
 }
 
 button[type="submit"] {
-    width: 100%;
-    padding: 10px 20px;
+    width: 100px;
+    padding: 10px 15px;
     background-color: green;
     color: #fff;
     border: none;
-    border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.3s;
 }
